tv/overseer-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: tv
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Requests
    flame.pawelmalak/url: https://overseerr.mdapi.ch
    flame.pawelmalak/category: TV
    flame.pawelmalak/icon: chat-question
    flame.pawelmalak/order: '20'
spec:
  ingressClassName: nginx
  rules:
    - host: overseerr.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: overseerr
                port:
                  number: 5055
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - overseerr.mdapi.ch
      secretName: overseerr-cert
